# Tarea1-Sistema-Operativos

rastreador/: Cargo.toml  Documentation.md  Prueba_elevar.cpp  ejecutable
rastreador/src/: main.rs  maximo.py
